Fixed spacing on individual login pages

--- a/ClientApp/css/singleLogin.css
+++ b/ClientApp/css/singleLogin.css
@@ -15,7 +15,7 @@
 
 .logo-link {
     position: relative;
-    top: 32vh;
+    top: 24vh;
     width: 200px;
 }
 
